<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.GalaxyPub.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.GalaxyPub.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewChangePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/height_weight_margin_26dp"
        android:layout_marginEnd="@dimen/height_weight_margin_26dp"
        android:paddingBottom="@dimen/height_weight_margin_10dp"
        app:cardCornerRadius="@dimen/corner_radius_10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/padding_16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/height_weight_margin_10dp"
                android:gravity="center"
                android:text="Change Password"
                android:textSize="@dimen/text_size_20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutUserName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/height_weight_margin_10dp"
                android:layout_marginEnd="@dimen/height_weight_margin_10dp"
                android:layout_marginBottom="@dimen/height_weight_margin_10dp"
                android:elevation="@dimen/height_weight_margin_2dp"
                android:hint="@string/old_password"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/red_200"
                app:boxStrokeWidthFocused="@dimen/height_weight_margin_2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/red_200"
                app:hintTextColor="@color/red_200"
                app:startIconDrawable="@drawable/lock_black_24"
                app:startIconTint="@color/red_200">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvOldPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/height_weight_margin_10dp"
                android:layout_marginEnd="@dimen/height_weight_margin_10dp"
                android:layout_marginBottom="@dimen/height_weight_margin_10dp"
                android:elevation="@dimen/height_weight_margin_2dp"
                android:hint="@string/password"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/red_200"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/red_200"
                app:hintTextColor="@color/red_200"
                app:startIconDrawable="@drawable/lock_black_24"
                app:startIconTint="@color/red_200">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/height_weight_margin_10dp"
                android:layout_marginEnd="@dimen/height_weight_margin_10dp"
                android:layout_marginBottom="@dimen/height_weight_margin_10dp"
                android:elevation="@dimen/height_weight_margin_2dp"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/red_200"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/red_200"
                app:hintTextColor="@color/red_200"
                app:startIconDrawable="@drawable/lock_black_24"
                app:startIconTint="@color/red_200">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Change"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>