<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.AppointmentFragment">

        <LinearLayout
            android:id="@+id/lyoutFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_3sdp"
            android:layout_marginStart="@dimen/_3sdp"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/airbnbcereal_medium"
                            android:text="From Date"
                            android:textSize="@dimen/_12sdp"
                            android:textColor="@color/txt_dark_gray" />


                        <ImageView
                            android:layout_width="@dimen/_10sdp"
                            android:layout_height="@dimen/_10sdp"
                            android:src="@drawable/m_star"
                            android:visibility="gone"/>

                    </LinearLayout>


                    <EditText
                        android:id="@+id/edtFromDate"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_28sdp"
                        android:background="@drawable/bg_edt_gray"
                        android:paddingEnd="@dimen/_3sdp"
                        android:paddingStart="@dimen/_3sdp"
                        android:fontFamily="@font/airbnbcereal_medium"
                        android:singleLine="true"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:textColor="@color/dark_gray"
                        android:textSize="@dimen/_11sdp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/gray"
                        android:visibility="gone"/>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/airbnbcereal_medium"
                            android:text="To Date"
                            android:textSize="@dimen/_12sdp"
                            android:textColor="@color/txt_dark_gray" />


                        <ImageView
                            android:layout_width="@dimen/_10sdp"
                            android:layout_height="@dimen/_10sdp"
                            android:src="@drawable/m_star"
                            android:visibility="gone"/>

                    </LinearLayout>


                    <EditText
                        android:id="@+id/edtToDate"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_28sdp"
                        android:background="@drawable/bg_edt_gray"
                        android:paddingEnd="@dimen/_3sdp"
                        android:paddingStart="@dimen/_3sdp"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:fontFamily="@font/airbnbcereal_medium"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/dark_gray"
                        android:textSize="@dimen/_11sdp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:visibility="gone"
                        android:background="@color/gray" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_weight="1"/>



                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <TextView
                            android:id="@+id/txtSearch"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@drawable/bg_search"
                            android:fontFamily="@font/airbnbcereal_medium"
                            android:gravity="center"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:paddingTop="@dimen/_3sdp"
                            android:paddingEnd="@dimen/_10sdp"
                            android:paddingStart="@dimen/_10sdp"
                            android:paddingBottom="@dimen/_3sdp"
                            android:text="Search"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_11sdp" />

                        <TextView
                            android:id="@+id/txtClear"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@drawable/bg_clear"
                            android:fontFamily="@font/airbnbcereal_medium"
                            android:gravity="center"
                            android:layout_marginStart="@dimen/_3sdp"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:paddingTop="@dimen/_3sdp"
                            android:paddingEnd="@dimen/_10sdp"
                            android:paddingStart="@dimen/_10sdp"
                            android:paddingBottom="@dimen/_3sdp"
                            android:text="Clear"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_11sdp" />

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/height_weight_margin_2dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:indicatorColor="@color/red_500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:trackColor="@color/red_200"
            app:trackThickness="4dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtAutoAppointment"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/height_weight_margin_16dp"
            android:hint="@string/appointment_type"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/recycler_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <AutoCompleteTextView
                android:id="@+id/autoTvAppointmentDropDown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvNoAppointments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/height_weight_margin_16dp"
            android:visibility="gone"
            android:gravity="center"
            android:text="@string/no_appointments"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/height_weight_margin_2dp"
            android:layout_marginBottom="@dimen/height_weight_margin_2dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lyoutFilter"
            app:layout_constraintBottom_toTopOf="@id/lyoutBttomView"
            tools:itemCount="5"
            tools:listitem="@layout/item_appointment" />


        <LinearLayout
            android:id="@+id/lyoutBttomView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_centerInParent="true"
            android:layout_alignParentBottom="true"
            android:visibility="visible"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/imgPrevious"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_next_arrow"
                android:padding="@dimen/_5sdp"
                android:rotation="180"/>
            <TextView
                android:id="@+id/txtLoadMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_accept"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/airbnbcereal_book"
                android:paddingStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:text="Load More"
                android:textColor="@color/white"
                android:textSize="@dimen/_11sdp"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/imgNext"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_next_arrow"
                android:padding="@dimen/_5sdp"/>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabNewForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:contentDescription="@string/new_form"
            android:src="@drawable/add_red_24"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>